# taskatui

./: Cargo.toml  README.md  add-task.nu  show_tws.nu  wipe_data.nu
migrations/: 0001_create_task_table.up.sql  0002_create_table_sub_tasks.down.sql  0002_create_table_sub_tasks.up.sql
src/: main.rs
src/data/: handlers.rs  models.rs
src/data/handlers/: mod.rs  st_handlers.rs  task_handlers.rs  tdm_handlers.rs
