[package]
name = "taskatui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "time",
  "runtime-tokio",
  "chrono",
] }
tokio-macros = "2.6.0"
